W-13659294: Modularize Mule integration tests runner (#12595)
* use modulePath for dependency resolution as well as classpath